# solanaceae_object_store

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/solanaceae/file/: file2_zstd.cpp  file2_zstd.hpp
src/solanaceae/object_store/: fwd.hpp  meta_components.hpp  meta_components_file.hpp  meta_components_file_id.inl  meta_components_id.inl  object_store.cpp  object_store.hpp
src/solanaceae/object_store/backends/: file2_stack.cpp  file2_stack.hpp  filesystem_storage.cpp  filesystem_storage.hpp  filesystem_storage_atomic.cpp  filesystem_storage_atomic.hpp
test/: CMakeLists.txt  test_backend_fs_atomic.cpp  test_file_zstd.cpp
